@@ -1,7 +1,9 @@
 DIST ecj-4.3.jar 1377431 RMD160 48fa985f763838bed750aa64a2fa997734438099 SHA1 da254944309a8387aa39323fe7bb7216a4518311 SHA256 9de193ea393ed50d868b730bad6916f7a8ef4ba80216f8606d3e1a0dd886e74b
 DIST gcc-4.3.4-espf-0.3.4.tar.bz2 16105 RMD160 2913dd0b2602fe0f1ca5f077d63379744027ec85 SHA1 8769d3d45b89e8716b3c9d1c0b7410b997994360 SHA256 07deff3295885875d9716bf516ae5d1bacdfcc0fa052eb2da7943e04c4d9563e
+DIST gcc-4.3.4-espf-0.3.5.tar.bz2 17486 RMD160 e941fd688fb37a9d5e008defd684a7164ad92158 SHA1 e8d0931b4383bf3f9ad2535b8b47c37ac6941c71 SHA256 333885ef82e8a9afa9e04d91d4b79b14f24d262010b3522e59ed50cd9181d8e0
 DIST gcc-4.3.4-patches-1.0.tar.bz2 74158 RMD160 3cf0f0a60996a248927d3af7b8a7a88e742d749f SHA1 885242feac53a73cc335102a78310bf729422729 SHA256 32ac6307b161b01d0f5e138564b400f9f52724f9572e02e844699e9ec7a6e425
 DIST gcc-4.3.4-specs-0.1.6.tar.bz2 1145 RMD160 c63913037b6824d5df01199b703985e96bc1af00 SHA1 630c10853e43ca30e47e8bdbbf03fa27b11143ca SHA256 6a020f7acbf9a5f7eb74c00515a3389d52b2a3c0bbf2f03b6634240d38667377
+DIST gcc-4.3.4-specs-0.1.7.tar.bz2 1893 RMD160 52c21a4d8a3220660c8a9a71c4ce5977c152df14 SHA1 b4951083d8b715a7a9c7bb065c0b0a4221e69597 SHA256 42adbe507422026514a2cb104e592ae87f5d402929068c43d93d46f835752428
 DIST gcc-4.3.4-uclibc-patches-1.0.tar.bz2 2298 RMD160 111f83201a780a0e8af442b90edddac0465ecccb SHA1 5bbeeeec53d1a3a75a856c30dd0107606a468a03 SHA256 dc475684868cbd38abeb9759bcab1cc6f2de81ff0743a80aef2753f5b1599d00
 DIST gcc-4.3.4.tar.bz2 59368714 RMD160 f23c73a07e15faecaa1bac045f36f4d16be1ddb5 SHA1 cf5248733f26aafa361b3583e74783181eeb88b9 SHA256 e572453bdb74cc4ceebfab9ffb411d9678343dff5bf86e9338d42fdd0818aa65
 DIST gcc-4.4.1-espf-0.3.4.tar.bz2 16533 RMD160 be013f96c6ebd7770b4681e1e251171c79d0d4d2 SHA1 563d727f52092acdbdf54affcc920296c75a9e57 SHA256 3399624fecb8d95fbcc3f5be444d0cf934d7cb7920f296c3d18767615b4d2d61
@@ -12,8 +14,8 @@ DIST gcc-4.4.1-specs-0.1.7.tar.bz2 1893 RMD160 52c21a4d8a3220660c8a9a71c4ce5977c
 DIST gcc-4.4.1-uclibc-patches-1.1.tar.bz2 2279 RMD160 b39cd85a9ec615511bb15c65e65aa61295699eda SHA1 8d5662e57533766ed7d63609df0c9d583771a7fc SHA256 b9592d5e14ddb8868599f1da6c2366b179d5a015a7330f819dd0e4fbf8523341
 DIST gcc-4.4.1.tar.bz2 62869928 RMD160 41cb4c76d1671b1d224d2a6e167ee183dd53d096 SHA1 9156ddb7e4cc72288ec31760d6ddc7981123a8a2 SHA256 cbefa9abd4adac0931e1b556072dcd8b32a360d4b95a94d7822c86bded803d5b
 EBUILD gcc-4.3.4-r1.ebuild 2158 RMD160 3fc887e746f738bdb28a3af6d819a0bf73cc20e4 SHA1 6f3f246cb947af3d39fe15308a98603fc5868b7e SHA256 6a3c619b187cb559039446d0d56c4b80874d120c7b16313be5f74dc4c92d1e34
-EBUILD gcc-4.3.4-r2.ebuild 2158 RMD160 3fc887e746f738bdb28a3af6d819a0bf73cc20e4 SHA1 6f3f246cb947af3d39fe15308a98603fc5868b7e SHA256 6a3c619b187cb559039446d0d56c4b80874d120c7b16313be5f74dc4c92d1e34
+EBUILD gcc-4.3.4-r2.ebuild 2158 RMD160 18e822f174f96a5d2d0fa1fdec579cf8ea4faf28 SHA1 c02f7b4f7eaa6e4e8991696bd3e59e77aa1251b7 SHA256 614089caafb4479117c15eafdc55efea669cd3c36c1b8727773fe0d34eb2b313
 EBUILD gcc-4.4.1-r1.ebuild 2023 RMD160 5aa15ccded984ae2dfa34f2b157bf63f70589be0 SHA1 70fdaf8d84e06b82ed08075f3143f4a359438779 SHA256 4a15a77cbb72c700c13088ca19abab448731b9d0804f66a2851d6d063491b2da
 EBUILD gcc-4.4.1-r2.ebuild 2023 RMD160 c629460c38ed5812f9a294f0a4683d8831229403 SHA1 89e29bd57d7348aedc0d6abae73a1aacea75bf81 SHA256 e159f425f0e31be027d455ff8dc3c9cb006cdcb81865598859fd467871344516
-MISC ChangeLog 977 RMD160 02aaa3b5cd1e5a9fd26645e7db8a9e48b6b37f6d SHA1 b39b974887dd34ce701fa95accb5464127de877e SHA256 cdfaae8c5a9a5b6dc3b301acdd393c058a905cbd4444916d6f37510cbd786eee
+MISC ChangeLog 1107 RMD160 39e2efabcfd883509762def8539a65d4f4471a53 SHA1 199fbbb5f33d0b72d357e91556aca72990352f52 SHA256 2f199a5fe2c24daba99ce2fa71e7c6bb2448929df69c18dd9a7ea27054bca76d
 MISC metadata.xml 1610 RMD160 de3ea2135f71f26100df1cc2c94f969f4fb58a10 SHA1 257abaaec0d10ed04c943b4db78f97833c6303ba SHA256 e0d36c00b5814e330850f731e2a4af8f9a1b77fde6499ce3964b7995520b13f6
