@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Oct 2009; Magnus Granberg <zorry@ume.nu> gcc-4.3.4-r2.ebuild:
+  Did't update the ESPF and SPECS. Thanks cilly for the note.
+
 *gcc-4.3.4-r2 (29 Sep 2009)
 
   29 Sep 2009; Magnus Granberg <zorry@ume.nu> +gcc-4.3.4-r2.ebuild:
